# c-utils

./: .gitignore  CMakeLists.txt  TODO.md
src/: defs.h  logger.c  logger.h  test.c  vulkan.c
tests/: test.c
